added more templates

--- a/project_gen/my_templates/python/pyproject.mustache
+++ b/project_gen/my_templates/python/pyproject.mustache
@@ -4,7 +4,7 @@
 {{^poetry1}}
 [project]
 {{/poetry1}}
-name = "{{{packageName}}}"
+name = "sergey {{{packageName}}}"
 version = "{{{packageVersion}}}"
 description = "{{{appName}}}"
 {{#poetry1}}
