--- a/project_gen/my_templates/tests/fixtures.jinja2
+++ b/project_gen/my_templates/tests/fixtures.jinja2
@@ -1,7 +1,6 @@
 import os
 import pytest
 from pathlib import Path
-
 {% for client in clients -%}
 import clients.http.{{client.get("package")}} as {{ client.get("package")}}
 {% endfor %}
@@ -30,29 +29,27 @@ options = (
 @pytest.fixture(scope="session",autouse=True)
 def set_config(request):
     config = Path(__file__).parent.parent.joinpath("config")
-    print('huy',config)
     config_name = request.config.getoption("--env")
     v.set_config_name(config_name)
     v.add_config_path(config)
     v.read_in_config()
     for option in options:
         v.set(f"--env", request.config.getoption(f"--{option}"))
-    os.environ["TELEGRAM_BOT_CHAT_ID"] = v.get("telegram.chat_id")
-    os.environ["TELEGRAM_BOT_ACCESS_TOKEN"] = v.get("telegram.token")
+    # os.environ["TELEGRAM_BOT_CHAT_ID"] = v.get("telegram.chat_id")
+    # os.environ["TELEGRAM_BOT_ACCESS_TOKEN"] = v.get("telegram.token")
     # request.config.stash['telegram-notifier-addfields']['environment'] = config_name
     # request.config.stash['telegram-notifier-addfields']['report'] = "http://sergey-gureev.github.io/my_api_tests/"
-    print("huyhuy",v.read_in_config())
 
-# {% for client in clients -%}
-# @pytest.fixture(scope="session", autouse=True)
-# def setup_swagger_coverage_{{ client.get("package")}}():
-#     check links manually
-#     reporter = CoverageReporter(api_name="{{ client.get("package")}}", host="http://5.63.153.31:5051")
-#     reporter.setup(path_to_swagger_json="/swagger/{{ client.get("client") | underscore }}/swagger.json")
+{% for client in clients -%}
+@pytest.fixture(scope="session", autouse=True)
+def setup_swagger_coverage_{{ client.get("package")}}():
+    # TODO check links manually
+    reporter = CoverageReporter(api_name="{{ client.get("package") }}", host="{{client.get("base_url")}}")
+    reporter.setup(path_to_swagger_json="/{{ client.get("base_url") | underscore }}/docs/openapi.json")
+    yield
+    reporter.generate_report()
+    reporter.cleanup_input_files()
 {% endfor %}
-#     yield
-#     reporter.generate_report()
-#     reporter.cleanup_input_files()
 
 def pytest_addoption(parser):
     parser.addoption("--env", action="store", default="stg", help="run stg")
@@ -61,7 +58,7 @@ def pytest_addoption(parser):
 
 {% for client in clients %}
 @pytest.fixture(scope="session")
-def {{ client.get("package")}}_{{ client.get("client") | underscore }}() -> {{ client.get("package")}}.{{ client.get("client")}}:
+def {{ client.get("package")}}_{{ client.get("client") | underscore }}(set_config) -> {{ client.get("package")}}.{{ client.get("client")}}:
     configuration = {{ client.get("package")}}.Configuration(host=v.get('service.{{ client.get("package")}}_{{ client.get("client") | underscore }}'))
     api_client = {{ client.get("package")}}.ApiClient(configuration=configuration)
     return  {{ client.get("package")}}.{{ client.get("client")}}(api_client=api_client)
